# minicar_diff_hardware

./: .gitignore  CMakeLists.txt  README.md  minicar_hardware_interface_plugin.xml  package.xml
config/: minicar_diff_real.xacro  minicar_hardware_config.yaml
include/robot_hardware/: gpio_motor_controller.hpp  minicar_hardware_interface.hpp  pca9685_controller.hpp
launch/: motor_only.launch.py  real_robot_bringup.launch.py
scripts/: motor_test.py
src/: gpio_motor_controller.cpp  minicar_hardware_interface.cpp  pca9685_controller.cpp
urdf/: minicar_diff_gazebo.xacro
